syntax = "proto3";

package gogotest.proto.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/lyft/protoc-gen-validate/validate/validate.proto";

option go_package = "protov1";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;


service GreeterService {

	rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SayTime (google.protobuf.Empty) returns (google.protobuf.Timestamp);

  rpc SubscribeTime (TimeRequest) returns (stream google.protobuf.Timestamp);

}

message HelloRequest {
	string name = 1 [(validate.rules).string.min_len = 3];
}

message HelloReply {
	string message = 1;
}

message TimeRequest {
	int32 count = 1 [(validate.rules).int32.gte = 1];
	google.protobuf.Duration interval = 2 [(validate.rules).duration.gte.seconds = 1];
}
